--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
 </head>
 <body>
-    
+    <div class = "choise">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+    <div><h1 class="screen"></h1></div>
+    <div><h1 class="leaderboard"></h1></div>
+    <div><h1 class="screen2"></h1></div>
 </body>
 </html>
